Switched from completion event to polling.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -25,6 +25,6 @@
         "algorithm": "cpp",
         "bitset": "cpp",
         "chrono": "cpp",
-        "utility": "cpp"
+        "ostream": "cpp"
     }
 }
