Added command line parsing utility.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -25,6 +25,7 @@
         "algorithm": "cpp",
         "bitset": "cpp",
         "chrono": "cpp",
-        "ostream": "cpp"
+        "ostream": "cpp",
+        "__tuple": "cpp"
     }
 }
