--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -14,8 +14,9 @@ set(HEADER_FILES
         dccs_utils.h
 )
 
-add_executable(rdma_exec
-        ${HEADER_FILES}
-        rdma_main.c)
-
+add_executable(rdma_exec ${HEADER_FILES} rdma_main.c)
 target_link_libraries(rdma_exec m ssl crypto ibverbs rdmacm)
+
+add_executable(mpi_exec ${HEADER_FILES} mpi_main.c)
+target_link_libraries(mpi_exec m ssl crypto ibverbs rdmacm)
+
