--- a/script/hosts.config
+++ b/script/hosts.config
@@ -2,3 +2,7 @@ b09-30.sysnet.ucsd.edu
 b09-32.sysnet.ucsd.edu
 b09-34.sysnet.ucsd.edu
 b09-36.sysnet.ucsd.edu
+b09-38.sysnet.ucsd.edu
+b09-40.sysnet.ucsd.edu
+b09-42.sysnet.ucsd.edu
+b09-44.sysnet.ucsd.edu
