--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "thirdparty/perftest"]
 	path = thirdparty/perftest
-	url = git@github.com:nilyibo/perftest.git
+	url = git@github.com:TritonNetworking/perftest.git
