Added script to run control signal program.

--- a/script/microbenchmark/config
+++ b/script/microbenchmark/config
@@ -7,6 +7,9 @@ BENCH_EXEC_DIR=$BUILD_DIR/microbenchmark
 RDMA_BENCH_EXECNAME=rdma_exec
 RDMA_BENCH_EXECPATH="$BENCH_EXEC_DIR/$RDMA_BENCH_EXECNAME"
 
+CONTROL_SIGNAL_EXECNAME=control_exec
+CONTROL_SIGNAL_EXECPATH="$BENCH_EXEC_DIR/$CONTROL_SIGNAL_EXECNAME"
+
 MPI_BENCH_EXECNAME=mpi_exec
 MPI_BENCH_EXECPATH="$BENCH_EXEC_DIR/$MPI_BENCH_EXECNAME"
 
